samples/_failures_safe/1761368236_6a8204_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3715132a.c: In function ‘main’:
./samples/SAFE/__tmp_3715132a.c:147:5: error: expected expression at end of input
  147 |     if (decompressed_size == 0)
      |     ^~
./samples/SAFE/__tmp_3715132a.c:147:5: error: expected declaration or statement at end of input
